Add paramters 'RATE_STABILIZER/{enable, period, set_point}' to default configuration files of module object-tracking

--- a/src/object-tracking/conf/config_realsense_320_240.ini
+++ b/src/object-tracking/conf/config_realsense_320_240.ini
@@ -59,6 +59,11 @@ use_normals         false
 method              smean
 window_size         3
 
+[RATE_STABILIZER]
+enable              false
+period              0.1
+set_point           20.0
+
 [SEGMENTATION]
 #possible types bounding_box and mask
 type                bounding_box
