--- a/src/object-tracking/conf/config_icub_320_240.ini
+++ b/src/object-tracking/conf/config_icub_320_240.ini
@@ -74,6 +74,11 @@ use_normals         false
 method              smean
 window_size         3
 
+[RATE_STABILIZER]
+enable              false
+period              0.1
+set_point           20.0
+
 [SEGMENTATION]
 type                in_hand
 iol_object_name     Bottle
