--- a/src/object-tracking/conf/config_mask_320_240.ini
+++ b/src/object-tracking/conf/config_mask_320_240.ini
@@ -63,6 +63,11 @@ use_normals         true
 method              smean
 window_size         3
 
+[RATE_STABILIZER]
+enable              false
+period              0.1
+set_point           20.0
+
 [SEGMENTATION]
 #possible types bounding_box and mask
 type                mask
