--- a/src/object-tracking/conf/config_mask_320_240.ini
+++ b/src/object-tracking/conf/config_mask_320_240.ini
@@ -10,9 +10,10 @@ fallback_key        camera_320_240
 # if set to 'old_image', the filter will use the lastest depth image available
 # if set to 'skip', the filter will skip correction if a new depth image is not available
 fetch_mode          old_image
-# ok for cracker, mustard, domino
-stride              30
-#stride               4
+
+# stride Cans  Mustard/Domino Cracker
+#        6     10             15
+stride   1
 
 [INITIAL_CONDITION]
 cov_x_0             (0.01, 0.01, 0.01)
@@ -25,7 +26,8 @@ use_superq_guess    true
 
 [KINEMATIC_MODEL]
 q_x                 (0.1, 0.1, 0.1)
-q_eul               (0.5, 0.5, 0.5)
+# 0.5 is also good
+q_eul               (1.0, 1.0, 1.0)
 
 [LIKELIHOOD]
 variance            0.05
@@ -35,6 +37,7 @@ enable_log          false
 absolute_log_path
 
 [MEASUREMENT_MODEL]
+# If outliers are not present it can be pushed to 0.001
 visual_covariance   (0.01, 0.01, 0.01)
 tactile_covariance  (0.0, 0.0, 0.0)
 
@@ -50,13 +53,15 @@ resample_threshold  0.3
 sample_from_mean    true
 
 [POINT_CLOUD_FILTERING]
-#good for cracker, mustard, domino
-outlier_threshold   0.2
-#outlier_threshold   0.1
+# outlier_threshold CrackerBox  Domino/Mustard/SpamCan/TomatoCan
+#                   0.2         0.1
+outlier_threshold   0.1
+
 
 [POINT_CLOUD_PREDICTION]
 type                localize_superquadric
-number_samples      500
+# 500 is also good
+number_samples      1000
 use_normals         true
 
 [POINT_ESTIMATE]
