Update default configuration file for module object-tracking for masks @ 640x480

--- a/src/object-tracking/conf/config_mask_640_480.ini
+++ b/src/object-tracking/conf/config_mask_640_480.ini
@@ -10,7 +10,10 @@ fallback_key        camera_640_480
 # if set to 'old_image', the filter will use the lastest depth image available
 # if set to 'skip', the filter will skip correction if a new depth image is not available
 fetch_mode          old_image
-stride              150
+
+# stride Cans  Mustard/Domino Cracker
+#        6     10             15
+stride   1
 
 [INITIAL_CONDITION]
 cov_x_0             (0.01, 0.01, 0.01)
@@ -23,7 +26,8 @@ use_superq_guess    true
 
 [KINEMATIC_MODEL]
 q_x                 (0.1, 0.1, 0.1)
-q_eul               (0.5, 0.5, 0.5)
+# 0.5 is also good
+q_eul               (1.0, 1.0, 1.0)
 
 [LIKELIHOOD]
 variance            0.05
@@ -33,6 +37,7 @@ enable_log          false
 absolute_log_path
 
 [MEASUREMENT_MODEL]
+# If outliers are not present it can be pushed to 0.001
 visual_covariance   (0.01, 0.01, 0.01)
 tactile_covariance  (0.0, 0.0, 0.0)
 
@@ -45,22 +50,26 @@ object_name         ycb_mustard_bottle
 [PARTICLES]
 number              5
 resample_threshold  0.3
-sample_from_mean    false
+sample_from_mean    true
 
 [POINT_CLOUD_FILTERING]
-outlier_threshold   0.2
+# outlier_threshold CrackerBox  Domino/Mustard/SpamCan/TomatoCan
+#                   0.2         0.1
+outlier_threshold   0.1
+
 
 [POINT_CLOUD_PREDICTION]
 type                localize_superquadric
-number_samples      600
-use_normals         false
+# 500 is also good
+number_samples      1000
+use_normals         true
 
 [POINT_ESTIMATE]
 method              smean
 window_size         3
 
 [RATE_STABILIZER]
-enable              false
+enable              true
 period              0.1
 set_point           20.0
 
