Add parameter 'LOG/dump_point_clouds' to configuration files of module object-tracking

--- a/src/object-tracking/conf/config_icub_320_240.ini
+++ b/src/object-tracking/conf/config_icub_320_240.ini
@@ -45,6 +45,7 @@ variance            0.05
 [LOG]
 enable_log          false
 absolute_log_path
+dump_point_clouds   false
 
 [MEASUREMENT_MODEL]
 visual_covariance   (0.01, 0.01, 0.01)
