--- a/src/object-tracking/conf/config_mask_640_480.ini
+++ b/src/object-tracking/conf/config_mask_640_480.ini
@@ -35,6 +35,7 @@ variance            0.05
 [LOG]
 enable_log          false
 absolute_log_path
+dump_point_clouds   false
 
 [MEASUREMENT_MODEL]
 # If outliers are not present it can be pushed to 0.001
