--- a/src/object-tracking/conf/config_realsense_320_240.ini
+++ b/src/object-tracking/conf/config_realsense_320_240.ini
@@ -73,6 +73,7 @@ iol_bbox_scale      1.3
 use_bbox_0          true
 bbox_tl_0           (138.75, 45.75)
 bbox_br_0           (216.25, 210.25)
+handle_mask_rpc     true
 
 [UNSCENTED_TRANSFORM]
 alpha               1.0
