--- a/src/object-tracking/conf/config_icub_320_240.ini
+++ b/src/object-tracking/conf/config_icub_320_240.ini
@@ -87,6 +87,7 @@ iol_bbox_scale      1.3
 use_bbox_0          true
 bbox_tl_0           (148.75, 65.75)
 bbox_br_0           (246.25, 189.25)
+handle_mask_rpc     true
 
 [UNSCENTED_TRANSFORM]
 alpha               1.0
