--- a/src/object-tracking/conf/config_mask_640_480.ini
+++ b/src/object-tracking/conf/config_mask_640_480.ini
@@ -78,6 +78,7 @@ set_point           20.0
 #possible types bounding_box and mask
 type                mask
 mask_name           006_mustard_bottle
+handle_mask_rpc     true
 
 [UNSCENTED_TRANSFORM]
 alpha               1.0
