--- a/src/object-tracking-viewer/conf/icub/config.ini
+++ b/src/object-tracking-viewer/conf/icub/config.ini
@@ -3,6 +3,8 @@ object_tracking_config    config_icub_320_240.ini
 fallback_config           left_320_240
 period                    0.03
 pc_left_z_thr             1.0
-show_hand                 true
+show_hand                 false
 hand_laterality           right
-show_ground_truth         true
+show_ground_truth         false
+show_estimate             true
+show_point_cloud          true
