--- a/src/object-tracking-viewer/conf/r1/config.ini
+++ b/src/object-tracking-viewer/conf/r1/config.ini
@@ -4,3 +4,5 @@ fallback_config            camera_640_480
 period                     0.03
 pc_left_z_thr              1.0
 show_ground_truth          false
+show_estimate              true
+show_point_cloud           true
