Add parameter hand_in_camera_frame in configuration file src/object-tracking-viewer/conf/icub/config.ini

--- a/src/object-tracking-viewer/conf/icub/config.ini
+++ b/src/object-tracking-viewer/conf/icub/config.ini
@@ -8,3 +8,4 @@ hand_laterality           right
 show_ground_truth         false
 show_estimate             true
 show_point_cloud          true
+hand_in_camera_frame      true
