Update configuration file src/object-tracking/conf/conf_icub_320_240.ini

--- a/src/object-tracking/conf/config_icub_320_240.ini
+++ b/src/object-tracking/conf/config_icub_320_240.ini
@@ -14,12 +14,12 @@ fetch_mode          old_image
 stride              5
 
 [HAND_OCCLUSION]
-handle_occlusion    true
+handle_occlusion    false
 laterality          right
 hull_scale          1.3
 
 [HAND_CONTACTS]
-handle_contacts     true
+handle_contacts     false
 laterality          right
 used_fingers        (index, middle, ring, little)
 
@@ -30,12 +30,12 @@ cov_eul_0           (0.01, 0.01, 0.01)
 cov_eul_dot_0       (0.01, 0.01, 0.01)
 center_0            (0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
 radius_0            (0.4, 0.4, 0.4, 3.14159, 3.14159, 3.14159)
-use_superq_guess    false
+use_superq_guess    true
 
 [KINEMATIC_MODEL]
 q_x                 (0.03, 0.03, 0.03)
 q_eul               (0.09, 0.09, 0.09)
-use_tdd_occlusion   true
+use_tdd_occlusion   false
 tdd_max_seconds     3.0
 tdd_exp_gain        1.5
 
@@ -51,15 +51,11 @@ dump_point_clouds   false
 visual_covariance   (0.01, 0.01, 0.01)
 tactile_covariance  (0.01, 0.01, 0.01)
 
-[MISC]
-send_hull           false
-send_mask           false
-
 [OBJECT]
 object_name         ycb_mustard_bottle
 
 [PARTICLES]
-number              10
+number              5
 resample_threshold  0.3
 sample_from_mean    false
 
@@ -67,7 +63,7 @@ sample_from_mean    false
 outlier_threshold   0.1
 
 [POINT_CLOUD_PREDICTION]
-type                mesh
+type                localize_superquadric
 number_samples      500
 use_normals         false
 
@@ -81,12 +77,8 @@ period              0.1
 set_point           20.0
 
 [SEGMENTATION]
-type                in_hand
-iol_object_name     Bottle
-iol_bbox_scale      1.3
-use_bbox_0          true
-bbox_tl_0           (148.75, 65.75)
-bbox_br_0           (246.25, 189.25)
+type                mask
+mask_name           006_mustard_bottle
 handle_mask_rpc     true
 
 [UNSCENTED_TRANSFORM]
