--- a/src/object-tracking-viewer/conf/icub/config.ini
+++ b/src/object-tracking-viewer/conf/icub/config.ini
@@ -8,4 +8,5 @@ hand_laterality           right
 show_ground_truth         false
 show_estimate             true
 show_point_cloud          true
+show_estimate_axes        false
 hand_in_camera_frame      true
