--- a/src/object-tracking-viewer/conf/r1/config.ini
+++ b/src/object-tracking-viewer/conf/r1/config.ini
@@ -6,3 +6,4 @@ pc_left_z_thr              1.0
 show_ground_truth          false
 show_estimate              true
 show_point_cloud           true
+show_estimate_axes         false
