--- a/src/object-tracking-viewer/conf/r1/config.ini
+++ b/src/object-tracking-viewer/conf/r1/config.ini
@@ -1,9 +1,9 @@
 camera                     RealsenseCamera
-object_tracking_config     config_mask_640_480.ini
-fallback_config            camera_640_480
+object_tracking_config     config_mask_320_240.ini
+fallback_config            camera_320_240
 period                     0.03
 pc_left_z_thr              1.0
 show_ground_truth          false
 show_estimate              true
 show_point_cloud           true
-show_estimate_axes         false
+show_estimate_axes         true
