Change configuration file src/object-tracking/conf/ycbvideo_camera_config.ini

--- a/src/object-tracking/conf/ycbvideo_camera_config.ini
+++ b/src/object-tracking/conf/ycbvideo_camera_config.ini
@@ -1,3 +1,11 @@
+[camera_320_240]
+width  320
+height 240
+fx     533.4
+fy     535.75
+cx     156.495
+cy     120.655
+
 [camera_640_480]
 width  640
 height 480
