Add parameters KINEMATIC_MODEL/{rate, estimate_period} to configuration files of module object-tracking

--- a/src/object-tracking/conf/config_mask_320_240.ini
+++ b/src/object-tracking/conf/config_mask_320_240.ini
@@ -25,6 +25,8 @@ radius_0            (0.4, 0.4, 0.4, 3.14159, 3.14159, 3.14159)
 use_superq_guess    true
 
 [KINEMATIC_MODEL]
+rate                0.03
+estimate_period     true
 q_x                 (0.1, 0.1, 0.1)
 # 0.5 is also good
 q_eul               (1.0, 1.0, 1.0)
