--- a/src/object-tracking/conf/config_realsense_320_240.ini
+++ b/src/object-tracking/conf/config_realsense_320_240.ini
@@ -22,6 +22,8 @@ radius_0            (0.4, 0.4, 0.4, 3.14159, 3.14159, 3.14159)
 use_superq_guess    false
 
 [KINEMATIC_MODEL]
+rate                30.0
+estimate_period     true
 q_x                 (0.09, 0.09, 0.09)
 q_eul               (0.2, 0.2, 0.2)
 
