Update default configuration file for ycb video

--- a/src/object-tracking/conf/config_ycbvideo.ini
+++ b/src/object-tracking/conf/config_ycbvideo.ini
@@ -1,7 +1,8 @@
 robot               r1
 
 [CAMERA]
-name                YCBVideoCamera
+name                YCBVideoCameraNRT
+path                /home/xenvre/ycb_video_49_nrt_masks
 # options for realsense are camera_320_240, camera_640_480
 fallback_key        camera_320_240
 
@@ -13,18 +14,20 @@ fetch_mode          new_image
 
 # stride Cans  Mustard/Domino Cracker
 #        6     10             15
-stride   15
+stride   10
 
 [INITIAL_CONDITION]
 cov_x_0             (0.01, 0.01, 0.01)
 cov_v_0             (0.000001, 0.000001, 0.000001)
 cov_eul_0           (0.01, 0.01, 0.01)
-cov_eul_dot_0       (0.00001, 0.00001, 0.00001)
+cov_eul_dot_0       (0.000001, 0.000001, 0.000001)
 center_0            (0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
 radius_0            (0.4, 0.4, 0.4, 3.14159, 3.14159, 3.14159)
 use_superq_guess    true
 
 [KINEMATIC_MODEL]
+rate                30.0
+estimate_period     false
 q_x                 (0.1, 0.1, 0.1)
 q_eul               (0.09, 0.09, 0.09)
 
@@ -32,8 +35,8 @@ q_eul               (0.09, 0.09, 0.09)
 variance            0.05
 
 [LOG]
-enable_log          false
-absolute_log_path
+enable_log          true
+absolute_log_path   /home/xenvre/output/output
 dump_point_clouds   false
 
 [MEASUREMENT_MODEL]
@@ -59,7 +62,7 @@ outlier_threshold   0.1
 
 
 [POINT_CLOUD_PREDICTION]
-type                localize_superquadric
+type                localize_superquadric_nrt
 # 500 is also good
 number_samples      1000
 use_normals         true
@@ -74,9 +77,10 @@ period              0.1
 set_point           30.0
 
 [SEGMENTATION]
-#possible types bounding_box and mask
-type                mask
-mask_name           006_mustard_bottle
+#possible types bounding_box, mask and masknrt (i.e. not in real time)
+type                masknrt
+path                /home/xenvre/ycb_video_49_nrt_masks
+mask_name           004_sugar_box
 handle_mask_rpc     true
 
 [UNSCENTED_TRANSFORM]
