Implement synched visualization in module object-tracking-viewer

--- a/src/object-tracking-viewer/conf/ycbvideo/config.ini
+++ b/src/object-tracking-viewer/conf/ycbvideo/config.ini
@@ -1,5 +1,5 @@
-camera                     YCBVideoCamera
-object_tracking_config     config_mask_320_240.ini
+camera                     YCBVideoCameraNRT
+object_tracking_config     config_ycbvideo.ini
 fallback_config            camera_320_240
 period                     0.03
 pc_left_z_thr              2.0
@@ -7,3 +7,4 @@ show_ground_truth          false
 show_estimate              true
 show_point_cloud           true
 show_estimate_axes         true
+sync_to_estimate           true
