Change default configuration file for module object-tracking-viewer for ycb video

--- a/src/object-tracking-viewer/conf/ycbvideo/config.ini
+++ b/src/object-tracking-viewer/conf/ycbvideo/config.ini
@@ -2,9 +2,9 @@ camera                     YCBVideoCameraNRT
 object_tracking_config     config_ycbvideo.ini
 fallback_config            camera_320_240
 period                     0.03
-pc_left_z_thr              2.0
+pc_left_z_thr              1.0
 show_ground_truth          false
 show_estimate              true
 show_point_cloud           true
-show_estimate_axes         true
+show_estimate_axes         false
 sync_to_estimate           true
