Update configuration file for module object-tracking for scenario YCB Video (real time and non real time)

--- a/src/object-tracking/conf/config_ycbvideonrt.ini
+++ b/src/object-tracking/conf/config_ycbvideonrt.ini
@@ -1,7 +1,7 @@
 robot               r1
 
 [CAMERA]
-name                YCBVideoCamera
+name                YCBVideoCameraNRT
 # options for realsense are camera_320_240, camera_640_480
 fallback_key        camera_320_240
 
@@ -77,7 +77,7 @@ set_point           30.0
 
 [SEGMENTATION]
 #possible types bounding_box, mask and masknrt (i.e. not in real time)
-type                mask
+type                masknrt
 handle_mask_rpc     false
 
 [UNSCENTED_TRANSFORM]
