Update configuration file ycbvideo/config.ini of module object-tracking-viewer

--- a/src/object-tracking-viewer/conf/ycbvideo/config.ini
+++ b/src/object-tracking-viewer/conf/ycbvideo/config.ini
@@ -1,5 +1,5 @@
 camera                     YCBVideoCameraNRT
-object_tracking_config     config_ycbvideo.ini
+object_tracking_config     config_ycbvideonrt.ini
 fallback_config            camera_320_240
 period                     0.03
 pc_left_z_thr              1.0
