Change default configuration file src/object-tracking/config/config_mask_320_240.ini

--- a/src/object-tracking/conf/config_mask_320_240.ini
+++ b/src/object-tracking/conf/config_mask_320_240.ini
@@ -13,7 +13,7 @@ fetch_mode          old_image
 
 # stride Cans  Mustard/Domino Cracker
 #        6     10             15
-stride   1
+stride   10
 
 [INITIAL_CONDITION]
 cov_x_0             (0.01, 0.01, 0.01)
@@ -25,11 +25,12 @@ radius_0            (0.4, 0.4, 0.4, 3.14159, 3.14159, 3.14159)
 use_superq_guess    true
 
 [KINEMATIC_MODEL]
-rate                0.03
+rate                30.0
 estimate_period     true
-q_x                 (0.1, 0.1, 0.1)
-# 0.5 is also good
-q_eul               (1.0, 1.0, 1.0)
+# q_x                 (0.1, 0.1, 0.1)
+# q_eul               (1.0, 1.0, 1.0)
+q_x                 (0.05, 0.05, 0.05)
+q_eul               (0.1, 0.1, 0.1)
 
 [LIKELIHOOD]
 variance            0.05
@@ -48,24 +49,24 @@ tactile_covariance  (0.0, 0.0, 0.0)
 send_hull           false
 
 [OBJECT]
-object_name         ycb_mustard_bottle
+object_name         003_cracker_box
 
 [PARTICLES]
-number              5
+number              1
 resample_threshold  0.3
 sample_from_mean    true
 
 [POINT_CLOUD_FILTERING]
 # outlier_threshold CrackerBox  Domino/Mustard/SpamCan/TomatoCan
 #                   0.2         0.1
-outlier_threshold   0.1
+outlier_threshold   0.2
 
 
 [POINT_CLOUD_PREDICTION]
 type                localize_superquadric
 # 500 is also good
 number_samples      1000
-use_normals         true
+use_normals         false
 
 [POINT_ESTIMATE]
 method              smean
