--- a/src/object-tracking/CMakeLists.txt
+++ b/src/object-tracking/CMakeLists.txt
@@ -99,6 +99,7 @@ set(${EXE_TARGET_NAME}_HDR
     include/SimulatedFilter.h
     include/SimulatedPointCloud.h
     include/SuperquadricSampler.h
+    include/SUKFCorrectionAlt.h
     include/Validator2D.h
     include/VCGTriMesh.h
     include/kdTree.h
@@ -145,6 +146,7 @@ set(${EXE_TARGET_NAME}_SRC
     src/SimulatedFilter.cpp
     src/SimulatedPointCloud.cpp
     src/SuperquadricSampler.cpp
+    src/SUKFCorrectionAlt.cpp
     src/Validator2D.cpp
     src/main.cpp
     src/springyFingers.cpp
