Temporarily introduce parameter MEASUREMENT_MODEL/mask_covariance in default configuration file of module object-tracking for configuration YCB Video non real time

--- a/src/object-tracking/conf/config_ycbvideonrt.ini
+++ b/src/object-tracking/conf/config_ycbvideonrt.ini
@@ -42,7 +42,7 @@ dump_point_clouds   false
 [MEASUREMENT_MODEL]
 # If outliers are not present it can be pushed to 0.001
 visual_covariance   (0.001, 0.001, 0.001)
-tactile_covariance  (0.0, 0.0, 0.0)
+mask_covariance     (100.0, 100.0)
 
 [MISC]
 send_hull           false
